@@ -3,6 +3,12 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/29/17: SEM_3-7-12
+8/29/17: Fixed camera setup dialog opening at its last size (In 3.6).
+
+8/29/17: Turned warning that image shift has not been calibrated for a montage
+from message box to log window output (In 3.6).
+
 8/28/17: Fixed SaveToOtherFile command to save specified, not active buffer.
 
 8/28/17: When an image that was already saved is saved to single/other file,
